GearsetPOC/force-app/main/default/objects/Points_Currency__c/Points_Currency__c.object-meta.xml
<CustomObject>
    <label>Points Currency</label>
    <nameField>
        <label>Points Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>