GearsetPOC/force-app/main/default/objects/Points_Currency__c/fields/Currency_Single_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Single_Value__c</fullName>
    <inlineHelpText>Currency Single Ticket Base Value</inlineHelpText>
    <label>Currency Single Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>