GearsetPOC/force-app/main/default/objects/Points_Currency__c/fields/Package_Ticket_Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Package_Ticket_Points_Value__c</fullName>
    <inlineHelpText>Conversion rate to points</inlineHelpText>
    <label>Package Ticket Points Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>