GearsetPOC/force-app/main/default/objects/Points_Currency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Single_Value__c</columns>
    <columns>Single_Ticket_Points_Value__c</columns>
    <columns>Currency_Package_Value__c</columns>
    <columns>Package_Ticket_Points_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>